Added cooking instructions to chickenanddumplings

--- a/recipes/chickenanddumplings.html
+++ b/recipes/chickenanddumplings.html
@@ -7,6 +7,30 @@
 </head>
 <body>
     <h1>Chicken and Dumplings</h1>
+    <img src="./Images/chickendump.png"alt="Chicken and Dumplings">
+    <p><h3>I've never tried this recipe personally but my girlfriend swears by it, lets see if it's any good!</h3></p>
+    <p>You'll need the following
+        <ul>
+            <li>3 Chicken Breasts</li>
+            <li>Can of Biscuts</li>
+            <li>One Box of Chicken Broth</li>
+            <li>One Can Cream of Chicken</li>
+            <li><strong>Optional </strong>Vegetables of your choosing</li>
+        </ul>
+    </p>
+    <p><h3>LETS GET STARTED</h3></p>
+        <ol>
+            <li>Boil 3 chicken breast in a pot with your box of chicken broth and 1 cup of water</li>
+            <li>Once chicken is boiled and cooked, set aside</li>
+            <li>Add the can of cream of chicken to the broth</li>
+            <li>Lower temp to Medium</li>
+            <li>Get your can of biscuits and cut them to desired dumpling size</li>
+            <li>Set your heat to medium-high and slowly add your bicuit pieces</li>
+            <li>Leave your biscuits to boil for 10 minutes and shred or cut up your chicken while you wait</li>
+            <li>Add your chicken (and veggies if using) to the the pot</li>
+            <li>Heat on medium-low temperature for 5 minutes</li>
+            <li>Enjoy!</li>
+        </ol>
     <p><h1><a href="../index.html">Odin Recipes</a></h1></p>
 </body>
     </html>
