modified meatloafballs.html with cooking instructions

--- a/recipes/meatloafballs.html
+++ b/recipes/meatloafballs.html
@@ -8,6 +8,32 @@
 <body>
     <h1>Meatloaf Balls</h1>
     <img src="./Images/meatloafballs.jpg">
+    <p><h3>"Meatloaf" Balls have been a staple of my childhood and adulthood. they're <em>quick</em> and easy to make, great with a variety of sides
+    and I love them and I'm hoping you will too after you try them</h3></p>
+    <p>You will need the following
+        <ul>
+            <li>One Egg</li>
+            <li>One Box of Stovetop stuffing</li>
+            <li>Ketchup</li>
+            <li>Barbeque Sauce</li>
+            <li>One pound of ground beef</li>
+            <li>A large bowl for mixing</li>
+            <li><strong>Optional </strong>A clove of garlic</li>
+        </ul>
+    </p>
+    <p><h3>LETS GET STARTED</h3></p>
+    <ol>
+        <li>Start by preheating your oven to 350 degrees</li>
+        <li>Take your bowl and empty the stuffing mix, read the back and add half the water it requires</li>
+        <li>Mix the stuffing and then add your ground beef, mix it all with (clean!) hands or spoon</li>
+        <li>Crack your egg and add to beef and stuffing, mix</li>
+        <li>Add a generous squirt of barbeque sauce and mix again</li>
+        <li><strong>If using garlic, mince and add it to mix, mix</strong></li>
+        <li>Spoon your meat into the muffin tray, filling the cups entirely</li>
+        <li>Give each cup a little squirt of ketchup and spread with a spoon</li>
+        <li>Throw it in the oven and cook for 30 minutes</li>
+        <li>Enjoy! Eat it with your favorite side or by themselves!</li>
+    </ol>
     
     <p><h1><a href="../index.html">Odin Recipes</a></h1></p>
 </body>
