Added cooking instructions, ordered list

--- a/recipes/meatloafballs.html
+++ b/recipes/meatloafballs.html
@@ -18,6 +18,7 @@
             <li>Barbeque Sauce</li>
             <li>One pound of ground beef</li>
             <li>A large bowl for mixing</li>
+            <li>Muffin Tray</li>
             <li><strong>Optional </strong>A clove of garlic</li>
         </ul>
     </p>
@@ -34,7 +35,6 @@
         <li>Throw it in the oven and cook for 30 minutes</li>
         <li>Enjoy! Eat it with your favorite side or by themselves!</li>
     </ol>
-    
     <p><h1><a href="../index.html">Odin Recipes</a></h1></p>
 </body>
     </html>
